--- a/templates.html
+++ b/templates.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Job Board</title>
+    <title>Job Boards</title>
   </head>
   <body>
     <div class="container top">
